@@ -1,6 +1,6 @@
 # Symlinks for legacy folders
 @MOZ_ADDONDIR@/extensions @MOZ_LIBDIR@/browser/extensions
-@MOZ_ADDONDIR@/plugins @MOZ_LIBDIR@/plugins
+@MOZ_ADDONDIR@/plugins @MOZ_LIBDIR@/browser/plugins
 @MOZ_ADDONDIR@/searchplugins @MOZ_LIBDIR@/browser/searchplugins
 @MOZ_ADDONDIR@/distribution/extensions @MOZ_LIBDIR@/browser/distribution/extensions
 
