@@ -34,6 +34,11 @@ firefox-trunk (22.0~a1~hg20130222r122576-0ubuntu1) UNRELEASED; urgency=low
     - update d/p/test-integration/xpcshell-disable-failing-tests.patch
   * Fix a const redeclaration error in test_purpose.js
     - update d/p/test-fixes/xpcshell-search-fix-const-redeclaration.patch
+  * Move the plugins/ symlink underneath browser/ so that these load again
+    (fixes plugin related mochitest failures since the application parts
+    were moved in to browser/)
+    - update debian/firefox.links.in
+    - update debian/firefox.postinst.in
 
   [ Jean-Baptiste Lallement <jean-baptiste@ubuntu.com> ]
   * Allow the autopkgtest harness to specify a location for test results
